special-topics/k3s-kubernetes/labs/network-policy/allow-traefik-to-web-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-web-nginx
  namespace: nginx-lab
spec:
  podSelector:
    matchLabels:
      app: web-nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
